<resources>
    <string name="app_name">Vital</string>
    <string name="login_facebook">Registrate con Faceebook</string>
    <string name="login_google">Registrate con Google</string>
    <string name="login_bienvenida">Bienvenido (a)</string>
    <string name="create_account">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="texto_registro">Ten el cuidado de tu alimentación en tus manos</string>
    <string name="registro_correo">Correo</string>
    <string name="registro_constrasenia">Contraseña</string>
    <string name="registro_constrasenia2">Confirmar contraseña</string>
    <string name="btn_crear">Crear</string>
    <string name="no_cuenta">¿No tienes cuenta?, crearla ya mismo</string>
    <string name="iniciar_sesion_con">Inicia sesión con</string>
    <string name="facebook_app_id">372811624093034</string>
    <string name="fb_login_protocol_scheme">fb372811624093034</string>


    <string name="formulario_genero">¿Cuál es tu género?</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="formulario_edad">¿Cuánto años tienes?</string>
    <string name="formulario_altura">¿Cuánto mides?</string>
    <string name="formulario_peso">¿Cuánto pesas?</string>
    <string name="btn_calcular_peso">Calcular tu peso ideal</string>
    <string name="iniciar">Iniciar</string>
    <string name="tomar_foto">Tomar foto</string>

    <string name="normal">Normal</string>
    <string name="actual">Actual</string>
    <string name="ideal">Ideal</string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="favoritos">Favoritos</string>
    <string name="desayuno">Desayuno</string>
    <string name="merienda">Merienda</string>
    <string name="comida">Comida</string>
    <string name="agregar_comida">Agregar<br />Comida</string>
    <string name="total_calorias">Total Calorías</string>

    <string name="alimento">Alimento</string>
    <string name="encabezado_alimento">Selecciona para escoger tus ingredientes</string>
    <string name="lacteos">Lácteos</string>
    <string name="proteina">Proteína</string>
    <string name="legumbres">Legumbres</string>
    <string name="verduras">Verduras</string>
    <string name="frutas">Frutas</string>
    <string name="cereales">Cereales</string>
    <string name="grasas">Grasas</string>
    <string name="agregar_nuevo">Agregar <br />nuevo</string>
    <string name="agregar_favorito">Agregar <br />favorito</string>

    <string name="banana">Banana</string>
    <string name="cereza">Cereza</string>
    <string name="durazno">Durazno</string>
    <string name="fresa">Fresa</string>
    <string name="manzana">Manzana</string>
    <string name="moras">Moras</string>
    <string name="naranja">Naranja</string>
    <string name="pera">Pera</string>
    <string name="pinia">Piña</string>
    <string name="sandia">Sandía</string>
    <string name="uvas">Uvas</string>
    <string name="zarzamora">Zarzamora</string>

    <string name="receta">Receta</string>
    <string name="encabezado_receta">¿Qué se te antoja hoy?</string>
    <string name="snack">Snack</string>
    <string name="cena">Cena</string>
    <string name="postres">Postres</string>
    <string name="bebidas">Bebidas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="procedimiento">Procedimiento</string>

    <string name="pollo_brocoli">Pollo con brócoli</string>
    <string name="caldo_papa">Caldo de papa</string>
    <string name="pasta_alfredo">Pasta alfredo</string>
    <string name="lentejas">Lentejas</string>
    <string name="albondigas">Albóndigas</string>
    <string name="enchiladas">Enchiladas</string>
    <string name="chile_relleno">Chile relleno</string>
    <string name="crema_champiniones">Crema de champiñones</string>

    <string name="pollo">Pollo</string>
    <string name="brocoli">Brócoli</string>

    <string name="tu_actividad_hoy">Tu actividad hoy</string>

    <string name="ejercicio">Ejercicio</string>


    <!--Ingredientes-->
    <string name="ingredientes_pollo_brocoli">1 Pechuga de pollo<br />150 gr de brócoli<br />2 Dientes de ajo<br />3 gr de jengibre fresco<br />Aceite de oliva extra virgen<br />Sal y pimienta</string>


    <!--Procedimiento-->
    <string name="procedimiento_pollo_brocoli">1- hierve agua en una olla con una pizca de sal y así cocer el brócoli, deja que se cocine durante 5 minutos.<br /><br />
        2- Salpimentar la pechuga de pollo y ponerla a dorar en una sartén con aceite de oliva, una vez dorada y jugosa saca la carne y corta en tiras gruesas.<br /><br />
        3- Echa de nuevo a la sartén y añade el ajo y jengibre picados, después saltea todos los ingredientes y deja a fuego unos minutos.</string>

</resources>