<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Alimento">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encabezado_alimento"
        android:gravity="center"
        android:layout_marginTop="55dp"
        android:textColor="@color/naranja_cafe"
        android:textSize="28sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_lacteos"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/lacteos"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_proteina"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/proteina"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_legumbres"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/legumbres"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_verduras"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/verduras"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_frutas"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/frutas"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_cereales"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/cereales"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btn_grasas"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/grasas"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>


    </LinearLayout>

</LinearLayout>