<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.RecetaFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/encabezado_receta"
        android:textColor="@color/gris"
        android:textSize="25dp"
        android:fontFamily="@font/poppinsmedium"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:columnCount="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/recomendados"
            android:layout_marginLeft="50dp"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/favoritos"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/recomendaciones"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/favoritos"
            android:textSize="16dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_desayuno"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/desayuno"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/btn_snack"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/snack"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btn_comida"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/comida"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btn_merienda"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/merienda"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btn_cena"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/cena"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btn_postres"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/postres"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>
        <Button
            android:id="@+id/btn_bebidas"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:text="@string/bebidas"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/poppinsregular"
            android:textColor="@color/rojo"
            android:layout_marginTop="15dp"/>


    </LinearLayout>

</LinearLayout>