<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetalleComida">

    <ImageView
        android:id="@+id/iv_imagen"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/pollobrocoli"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:text="@string/desayuno"
        android:background="@drawable/background_verde"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ingredientes"
        android:textColor="@color/letras_boton"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_marginStart="30dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/meat"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pollo"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/letras_titulo" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/broccoli"/>

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/brocoli"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/letras_titulo" />

        </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ingredientes_pollo_brocoli"
                android:textSize="18sp"
                android:textColor="@color/letras_titulo"
                android:textAlignment="textStart"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/procedimiento"
        android:textColor="@color/letras_texto2"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/procedimiento_pollo_brocoli"
        android:textSize="16sp"
        android:textColor="@color/letras_titulo" />

</LinearLayout>