<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FavoritosInicio">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textColor="@color/gris"
        android:textSize="25dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/alimento"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/background_verde"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/manzana"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/manzana"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"/>

    </GridLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/receta"
        android:textStyle="bold"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/background_gris"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/ejercicio"
        android:textStyle="bold"
        android:textColor="@color/rojo"
        android:textSize="20sp"
        android:fontFamily="@font/poppinslight"
        android:background="@drawable/background_gris"/>

</LinearLayout>