<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IniciarSesion">

    <ImageView
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/v"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:text="@string/login_bienvenida"
        android:fontFamily="@font/poppinsregular"
        android:textSize="22sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="45dp"
        android:textAllCaps="false"
        android:text="@string/login_google"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsregular"
        android:background="@drawable/background_gris"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:layout_marginBottom="44dp"
        android:textAllCaps="false"
        android:text="@string/login_facebook"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsregular"
        android:background="@drawable/background_gris"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_crear_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="70dp"
        android:textAllCaps="false"
        android:text="@string/create_account"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsregular"
        android:textColor="@color/white"
        android:background="@drawable/background_verde"/>



</LinearLayout>